added more to portfolio

--- a/index.html
+++ b/index.html
@@ -2,28 +2,64 @@
 <html>
   <head>
     <title>Nathaniel Kloss' Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./portfolio.css" />
   </head>
 
-  <body>
+  <body class="textColor">
     <header>
-      <h1>Nathaniel Kloss</h1>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About Me</li>
-          <li>Projects</li>
+      <nav class="navbar navbar-dark custom-navbar fixed-top">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">My Portfolio</a>
+    <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title textColor" id="offcanvasNavbarLabel">Areas Around My Page</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Different Projects
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <li><a class="dropdown-item" href="#">Password Generator</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">A Quiz</a></li>
+            </ul>
+          </li>
         </ul>
-      </nav>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
     </header>
 
     <main>
-      <section>
+      
+      <section class="container pt-5 mt-5">
         <article>
-          <h2>About Me</h2>
-          <p>
-            First off, welcome! This is my first official website! Now let's get
+          <div class="card text-white bg-dark">
+  <div class="card-header aboutMe">
+    About Me
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Nathaniel Kloss</h5>
+    <p class="card-text">First off, welcome! This is my first official website! Now let's get
             you to know me a little, I am a fresh highschool graduate that is
             hoping to get into Durham Technical Community College. I love music,
             art, spending time with those I value, long boarding, playing video
@@ -36,15 +72,37 @@
             those I do socialize with. I would describe myself As a friendly
             figure, kind, smart, dedicated, hard working, and unbreakable. As
             time goes on I hope to gain more experience, graduate from college
-            and be able to live comfortably.
-          </p>
-          <img class="myImage" src="./IMG_1486.JPG" />
-          <h2>Projects</h2>
-          <ul>
-            <li><a href="./password/index.html">Password Generator </a></li>
-          </ul>
+            and be able to live comfortably.</p>
+    <img class="myImage" src="./IMG_1486.JPG" />
+  </div>
+</div>
+<div class="text-white bg-dark row mt-4">
+  <div class="card-header aboutMe col-12">
+    Projects
+  </div>
+    <div class="row p-4">
+      <div class="card bg-dark col-12 col-md-6">
+        <img src="./passwordGenerator.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Password Generator</h5>
+          <p class="card-text">This is exactly what I claim it to be, a password generator that will take in a users input of how many characters they wish to use, what numbers they want to use, whether ornot they want capitol or lower case letters and if they want symbols.</p>
+          <a href="./password/index.html" class="btn btn-primary">Go To Password Generator</a>
+        </div>
+      </div>
+      <div class="card bg-dark col-12 col-md-6">
+        <img src="./Quiz.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Password Generator</h5>
+          <p class="card-text">I had made this to test my skills, it is a small quiz with few questions, however  could make more if I wish to do so. The questions genre also varies.</p>
+          <a href="./quiz/index.html" class="btn btn-primary">Go To The Quiz</a>
+      </div>
+    </div>
+</div>
+
+  
         </article>
       </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
