added finishing touches

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="./quiz/index.html">A Quiz</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="./Trending-YouTube-Website/index.html">YouTube Trendy</a></li>
             </ul>
           </li>
         </ul>
@@ -101,6 +105,13 @@
           <a href="./quiz/index.html" class="btn btn-primary">Go To The Quiz</a>
       </div>
     </div>
+    <div class="card bg-dark col-12 col-md-6">
+        <img src="./trending.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title secondFont">YouTube Trendy</h5>
+          <p class="card-text mainFont">This page shows you what is currently trending on YouTube from the default tab to movies, gaming, and music.</p>
+          <a href="./Trending-YouTube-Website/index.html" class="btn btn-primary">Go To YouTube Trendy</a>
+      </div>
 </div>
 
   
