--- a/Trending-YouTube-Website/index.html
+++ b/Trending-YouTube-Website/index.html
@@ -12,13 +12,17 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
+          <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Inter">
     <link href="./app.css" rel="stylesheet"/>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">YouTube Trendy</a>
+        <a class="navbar-brand titleFont" href="#">YouTube Trendy</a>
         <button
           class="navbar-toggler"
           type="button"
